[package]
name = "chainlib"
version = "0.0.1"

[lib]
path = "lib.rs"

[dependencies]
chainlib-core = { path ="./core" }
bitcoin = { path = "./bitcoin" }
ethereum = { path = "./ethereum" }
tron = { path = "./tron" }
jsonrpc = { path = "./jsonrpc" }

[workspace]
members = [
    "core",
    "bitcoin",
    "ethereum",
    "tron",
    "jsonrpc",
]
