[package]
name = "chainlib"
version = "0.0.1"

[lib]
path = "lib.rs"

[dependencies]
chainlib-core = { path ="./core" }
bitcoin = { path = "./bitcoin" }
ethereum = { path = "./ethereum" }
tron = { path = "./tron" }
filecoin = { path = "./filecoin" }
omni = { path = "./omni" }
# rpc_test = { path = "./rpc_test" }

[workspace]
members = [
    "core",
    "bitcoin",
    "ethereum",
    "tron",
    "filecoin",
    "omni",
    # "rpc_test"
]
